Cambios en la vista de registro - Responsive design

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,81 +9,102 @@
 
     <TextView
         android:id="@+id/tvUsername"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="48dp"
-        android:textColor="@color/black_title"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/username"
+        android:textColor="@color/black_title"
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/etUsername"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/tvEmail"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="48dp"
-        android:textColor="@color/black_title"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/email"
+        android:textColor="@color/black_title"
         android:textSize="@dimen/profile"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/etEmail"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/tvUsernameError" />
 
     <TextView
         android:id="@+id/tvUsernameError"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="20dp"
         android:textColor="@color/error_red"
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="normal"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etUsername" />
 
     <TextView
         android:id="@+id/tvPasswordError"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="10dp"
         android:textColor="@color/error_red"
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="normal"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/btnCreateUser"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPassword" />
 
     <TextView
         android:id="@+id/tvEmailError"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="20dp"
         android:textColor="@color/error_red"
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="normal"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/tvPassword"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmail" />
 
     <TextView
         android:id="@+id/tvPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="48dp"
-        android:textColor="@color/black_title"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/password"
+        android:textColor="@color/black_title"
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/etPassword"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/tvEmailError" />
 
     <ImageButton
         android:id="@+id/ibBack"
@@ -103,7 +124,7 @@
         android:id="@+id/imageView2"
         android:layout_width="159dp"
         android:layout_height="162dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/empty_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,22 +134,25 @@
         android:id="@+id/btnCreateUser"
         android:layout_width="250sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="25dp"
         android:background="@drawable/btn_shape_round"
         android:enabled="false"
         android:text="@string/create_user"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/tvPasswordError" />
 
     <EditText
         android:id="@+id/etUsername"
-        android:layout_width="320dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/btn_shape_rounded_square"
         android:ems="10"
         android:hint="@string/username_hint"
@@ -136,15 +160,18 @@
         android:paddingLeft="10dp"
         android:singleLine="true"
         android:textColorHint="#DDDDDD"
+        app:layout_constraintBottom_toTopOf="@+id/tvUsernameError"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
 
     <EditText
         android:id="@+id/etEmail"
-        android:layout_width="320dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/btn_shape_rounded_square"
         android:ems="10"
         android:hint="@string/email_hint"
@@ -152,15 +179,18 @@
         android:paddingLeft="10dp"
         android:singleLine="true"
         android:textColorHint="#DDDDDD"
+        app:layout_constraintBottom_toTopOf="@+id/tvEmailError"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
 
     <EditText
         android:id="@+id/etPassword"
-        android:layout_width="320dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/btn_shape_rounded_square"
         android:ems="10"
         android:hint="@string/password_hint"
@@ -168,6 +198,8 @@
         android:paddingLeft="10dp"
         android:singleLine="true"
         android:textColorHint="#DDDDDD"
+        app:layout_constraintBottom_toTopOf="@+id/tvPasswordError"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
 
