Cambios en la vista de editar perfil - Responsive design

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -16,8 +16,8 @@
             android:id="@+id/ibBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="@color/background_green"
             android:contentDescription="@string/back"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,8 +29,8 @@
         <ImageView
             android:id="@+id/ivProfile"
             android:layout_width="125dp"
-            android:layout_height="125dp"
-            android:layout_marginTop="80dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="70dp"
             android:contentDescription="@string/profile"
             android:src="@drawable/empty_avatar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,12 +43,11 @@
             android:id="@+id/btnEditImage"
             android:layout_width="204dp"
             android:layout_height="46dp"
-            android:layout_marginStart="141dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="140dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/btn_shape_round"
             android:text="@string/edit_image"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/tvUsername"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivProfile"
@@ -56,23 +55,28 @@
 
         <TextView
             android:id="@+id/tvUsername"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="50dp"
             android:text="@string/username_profile"
             android:textColor="@color/black_title"
             android:textSize="@dimen/profile"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/etUsername"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnEditImage" />
 
         <EditText
             android:id="@+id/etUsername"
-            android:layout_width="320dp"
+            android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginStart="33dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/btn_shape_rounded_square"
             android:ems="10"
             android:hint="@string/username_profile"
@@ -80,42 +84,52 @@
             android:minHeight="48dp"
             android:paddingLeft="10dp"
             android:singleLine="true"
+            app:layout_constraintBottom_toTopOf="@+id/tvUsernameError"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
 
         <TextView
             android:id="@+id/tvUsernameError"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="15dp"
             android:textColor="@color/error_red"
             android:textSize="@dimen/settings_slider_title_font_size"
             android:textStyle="normal"
             android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/tvEmail"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etUsername"
             tools:visibility="invisible" />
 
         <TextView
             android:id="@+id/tvEmail"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
             android:text="@string/email_profile"
             android:textColor="@color/black_title"
             android:textSize="@dimen/profile"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/etEmail"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvUsernameError" />
 
         <EditText
             android:id="@+id/etEmail"
-            android:layout_width="320dp"
+            android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginStart="33dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/btn_shape_rounded_square"
             android:ems="10"
             android:hint="@string/prompt_email"
@@ -123,62 +137,78 @@
             android:minHeight="48dp"
             android:paddingLeft="10dp"
             android:singleLine="true"
+            app:layout_constraintBottom_toTopOf="@+id/tvEmailError"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
 
         <TextView
             android:id="@+id/tvEmailError"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="15dp"
             android:textColor="@color/error_red"
             android:textSize="@dimen/settings_slider_title_font_size"
             android:textStyle="normal"
             android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/tvPassword"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etEmail"
             tools:visibility="invisible" />
 
         <TextView
             android:id="@+id/tvPassword"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="5dp"
             android:text="@string/password_profile"
             android:textColor="@color/black_title"
             android:textSize="@dimen/profile"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/etPassword"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvEmailError" />
 
         <EditText
             android:id="@+id/etPassword"
-            android:layout_width="320dp"
+            android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginStart="33dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/btn_shape_rounded_square"
             android:ems="10"
             android:hint="@string/password_profile"
-            android:background="@drawable/btn_shape_rounded_square"
             android:inputType="textPassword"
             android:minHeight="48dp"
             android:paddingLeft="10dp"
             android:singleLine="true"
+            app:layout_constraintBottom_toTopOf="@+id/tvPasswordError"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
 
         <TextView
             android:id="@+id/tvPasswordError"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="15dp"
             android:textColor="@color/error_red"
             android:textSize="@dimen/settings_slider_title_font_size"
             android:textStyle="normal"
             android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/btnSave"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etPassword"
             tools:visibility="invisible" />
@@ -187,11 +217,12 @@
             android:id="@+id/btnSave"
             android:layout_width="148dp"
             android:layout_height="48dp"
-            android:layout_marginStart="128dp"
-            android:layout_marginTop="20dp"
-            android:textStyle="bold"
+            android:layout_marginBottom="25dp"
             android:background="@drawable/btn_shape_round"
             android:text="@string/save_profile"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvPasswordError" />
     </androidx.constraintlayout.widget.ConstraintLayout>
