Cambios en las vistas de estadisticas - Responsive design

--- a/app/src/main/res/layout/fragment_statistics_2.xml
+++ b/app/src/main/res/layout/fragment_statistics_2.xml
@@ -15,8 +15,8 @@
             android:id="@+id/btnBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="@color/background_green"
             android:contentDescription="@string/back"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,72 +29,87 @@
             android:id="@+id/estadisticas2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="70dp"
             android:fontFamily="@font/varela_round"
             android:text="@string/statistics"
             android:textColor="@color/white"
             android:textSize="60sp"
+            app:layout_constraintBottom_toTopOf="@+id/numPreguntasAcertadas"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnBack" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/numPreguntasAcertadas"
-            android:layout_width="@dimen/estadisticas_datos_width"
+            android:layout_width="0dp"
             android:layout_height="@dimen/estadisticas_datos_height"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/btn_shape_round"
             android:fontFamily="@font/varela_round"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/num_correct_questions"
             android:textColor="@color/black"
             android:textSize="@dimen/estadisticas_datos"
+            app:layout_constraintBottom_toTopOf="@+id/numPreguntasIncorrectas"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/estadisticas2" />
 
         <TextView
             android:id="@+id/numPreguntasIncorrectas"
-            android:layout_width="@dimen/estadisticas_datos_width"
+            android:layout_width="0dp"
             android:layout_height="@dimen/estadisticas_datos_height"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="50dp"
             android:background="@drawable/btn_shape_round"
             android:fontFamily="@font/varela_round"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/num_wrong_questions"
             android:textColor="@color/black"
             android:textSize="@dimen/estadisticas_datos"
+            app:layout_constraintBottom_toTopOf="@+id/numAhorcadosAcertadas"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/numPreguntasAcertadas" />
 
         <TextView
             android:id="@+id/numAhorcadosAcertadas"
-            android:layout_width="@dimen/estadisticas_datos_width"
+            android:layout_width="0dp"
             android:layout_height="@dimen/estadisticas_datos_height"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="50dp"
             android:background="@drawable/btn_shape_round"
             android:fontFamily="@font/varela_round"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/num_correct_hangman"
             android:textColor="@color/black"
             android:textSize="@dimen/estadisticas_datos"
+            app:layout_constraintBottom_toTopOf="@+id/numAhorcadosIncorrectas"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/numPreguntasIncorrectas" />
 
         <TextView
             android:id="@+id/numAhorcadosIncorrectas"
-            android:layout_width="@dimen/estadisticas_datos_width"
+            android:layout_width="0dp"
             android:layout_height="@dimen/estadisticas_datos_height"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="100dp"
             android:background="@drawable/btn_shape_round"
             android:fontFamily="@font/varela_round"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/num_wrong_hangman"
             android:textColor="@color/black"
             android:textSize="@dimen/estadisticas_datos"
+            app:layout_constraintBottom_toTopOf="@+id/tvPage2"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/numAhorcadosAcertadas" />
 
@@ -102,11 +117,12 @@
             android:id="@+id/ivLeft"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginStart="46dp"
+            android:layout_marginStart="50dp"
             android:layout_marginBottom="50dp"
             android:contentDescription="@string/left"
             android:src="?attr/actionModeCloseDrawable"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tvPage2"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="ImageContrastCheck" />
 
@@ -114,9 +130,9 @@
             android:id="@+id/tvPage2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="89dp"
-            android:layout_marginEnd="89dp"
-            android:layout_marginBottom="55dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginEnd="90dp"
+            android:layout_marginBottom="50dp"
             android:text="@string/two"
             android:textAlignment="center"
             android:textColor="#212121"
@@ -130,13 +146,14 @@
             android:id="@+id/ivRight"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginEnd="46dp"
+            android:layout_marginEnd="50dp"
             android:layout_marginBottom="50dp"
             android:contentDescription="@string/right"
             android:rotation="180"
             android:src="?attr/actionModeCloseDrawable"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvPage2"
             tools:ignore="ImageContrastCheck" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
