--- a/app/src/main/res/layout/fragment_statistics_1.xml
+++ b/app/src/main/res/layout/fragment_statistics_1.xml
@@ -15,8 +15,8 @@
             android:id="@+id/btnBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="@color/background_green"
             android:contentDescription="@string/back"
             android:onClick="goToMainScreen"
@@ -30,103 +30,123 @@
             android:id="@+id/estadisticas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="80dp"
             android:fontFamily="@font/varela_round"
             android:text="@string/statistics"
             android:textColor="@color/white"
             android:textSize="60sp"
+            app:layout_constraintBottom_toTopOf="@+id/numPartidasJugadas"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnBack" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/numPartidasJugadas"
-            android:layout_width="@dimen/estadisticas_datos_width"
+            android:layout_width="0dp"
             android:layout_height="@dimen/estadisticas_datos_height"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginEnd="50dp"
             android:background="@drawable/btn_shape_round"
             android:fontFamily="@font/varela_round"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/num_games_played"
             android:textColor="@color/black"
             android:textSize="@dimen/estadisticas_datos"
+            app:layout_constraintBottom_toTopOf="@+id/numPartidasGanadas"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/estadisticas" />
 
         <TextView
             android:id="@+id/numPartidasGanadas"
-            android:layout_width="@dimen/estadisticas_datos_width"
+            android:layout_width="0dp"
             android:layout_height="@dimen/estadisticas_datos_height"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
             android:background="@drawable/btn_shape_round"
             android:fontFamily="@font/varela_round"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/num_games_won"
             android:textColor="@color/black"
             android:textSize="@dimen/estadisticas_datos"
+            app:layout_constraintBottom_toTopOf="@+id/numPartidasPerdidas"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/numPartidasJugadas" />
 
         <TextView
             android:id="@+id/numPartidasPerdidas"
-            android:layout_width="@dimen/estadisticas_datos_width"
+            android:layout_width="0dp"
             android:layout_height="@dimen/estadisticas_datos_height"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
             android:background="@drawable/btn_shape_round"
             android:fontFamily="@font/varela_round"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/num_games_lost"
             android:textColor="@color/black"
             android:textSize="@dimen/estadisticas_datos"
+            app:layout_constraintBottom_toTopOf="@+id/numPartidasAbandonadas"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/numPartidasGanadas" />
 
         <TextView
             android:id="@+id/numPartidasAbandonadas"
-            android:layout_width="@dimen/estadisticas_datos_width"
+            android:layout_width="0dp"
             android:layout_height="@dimen/estadisticas_datos_height"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
             android:background="@drawable/btn_shape_round"
             android:fontFamily="@font/varela_round"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/num_abandoned_answers"
             android:textColor="@color/black"
             android:textSize="@dimen/estadisticas_datos"
+            app:layout_constraintBottom_toTopOf="@+id/tiempoPromedio"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/numPartidasPerdidas" />
 
         <TextView
             android:id="@+id/tiempoPromedio"
-            android:layout_width="@dimen/estadisticas_datos_width"
+            android:layout_width="0dp"
             android:layout_height="@dimen/estadisticas_datos_height"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
             android:background="@drawable/btn_shape_round"
             android:fontFamily="@font/varela_round"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/mean_time"
             android:textColor="@color/black"
             android:textSize="@dimen/estadisticas_datos"
+            app:layout_constraintBottom_toTopOf="@+id/tiempoTotal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/numPartidasAbandonadas"
             tools:ignore="TextSizeCheck" />
 
         <TextView
             android:id="@+id/tiempoTotal"
-            android:layout_width="@dimen/estadisticas_datos_width"
+            android:layout_width="0dp"
             android:layout_height="@dimen/estadisticas_datos_height"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="150dp"
             android:background="@drawable/btn_shape_round"
             android:fontFamily="@font/varela_round"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/total_time"
             android:textColor="@color/black"
             android:textSize="@dimen/estadisticas_datos"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tiempoPromedio" />
 
@@ -134,12 +154,13 @@
             android:id="@+id/ivLeft"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginStart="46dp"
+            android:layout_marginStart="50dp"
             android:layout_marginBottom="50dp"
             android:contentDescription="@string/left"
             android:src="?attr/actionModeCloseDrawable"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tvPage"
             app:layout_constraintStart_toStartOf="parent"
             app:tint="@color/grey"
             tools:ignore="ImageContrastCheck" />
@@ -148,9 +169,9 @@
             android:id="@+id/tvPage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="89dp"
-            android:layout_marginEnd="89dp"
-            android:layout_marginBottom="55dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginEnd="90dp"
+            android:layout_marginBottom="50dp"
             android:text="@string/one"
             android:textAlignment="center"
             android:textColor="#212121"
@@ -164,13 +185,14 @@
             android:id="@+id/ivRight"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginEnd="46dp"
+            android:layout_marginEnd="50dp"
             android:layout_marginBottom="50dp"
             android:contentDescription="@string/right"
             android:rotation="180"
             android:src="?attr/actionModeCloseDrawable"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvPage"
             tools:ignore="ImageContrastCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
