--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -11,11 +11,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="48sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,8 +27,10 @@
         android:id="@+id/imageView"
         android:layout_width="261dp"
         android:layout_height="261dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         android:contentDescription="@string/app_logo_description"
+        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -37,10 +41,12 @@
         android:id="@+id/btnPlay"
         android:layout_width="250sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/btn_shape_round"
         android:text="@string/button_play"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btnStatistics"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,10 +56,10 @@
         android:id="@+id/btnStatistics"
         android:layout_width="250sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:background="@drawable/btn_shape_round"
         android:text="@string/button_statistic"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btnSettings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,6 +73,7 @@
         android:background="@drawable/btn_shape_round"
         android:text="@string/button_setting"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btnProfile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,9 +84,11 @@
         android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="150dp"
         android:background="@drawable/btn_shape_round"
         android:text="@string/profile"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,8 +98,8 @@
         android:id="@+id/tvVersion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/app_name"
         android:textSize="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -101,9 +110,11 @@
         android:id="@+id/btnLogout"
         android:layout_width="75dp"
         android:layout_height="75dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@color/background_green"
         android:contentDescription="@string/logout"
-        app:layout_constraintBottom_toTopOf="@+id/tvVersion"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/logout" />
 
@@ -111,8 +122,8 @@
         android:id="@+id/btnRanking"
         android:layout_width="68dp"
         android:layout_height="68dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/ranking_ic"
         android:contentDescription="@string/ranking"
         app:layout_constraintBottom_toBottomOf="parent"
